force-app/main/default/objects/LabBooking__c/LabBooking__c.object-meta.xml
<CustomObject>
    <label>实验室预约</label>
    <nameField>
        <displayFormat>LB-{000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>