force-app/main/default/objects/LabBooking__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>取消勾选时，该实验室在学生门户将不可见，学生无法进行预约操作。</inlineHelpText>
    <label>可预约</label>
    <type>Checkbox</type>
</CustomField>