force-app/main/default/objects/LabBooking__c/fields/BookedNumber__c.field-meta.xml
<CustomField>
    <fullName>BookedNumber__c</fullName>
    <label>已预约人数</label>
    <summaryFilterItems>
        <field>LabBookingApplication__c.ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>审批中, 已批准</value>
    </summaryFilterItems>
    <summaryForeignKey>LabBookingApplication__c.BookedLab__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>