force-app/main/default/objects/LabBooking__c/fields/BookingEndTime__c.field-meta.xml
<CustomField>
    <fullName>BookingEndTime__c</fullName>
    <label>停止预约时间</label>
    <type>DateTime</type>
</CustomField>