force-app/main/default/objects/LabBooking__c/fields/BookingStartTime__c.field-meta.xml
<CustomField>
    <fullName>BookingStartTime__c</fullName>
    <label>开放预约时间</label>
    <type>DateTime</type>
</CustomField>