force-app/main/default/objects/LabBooking__c/fields/ClosingTime__c.field-meta.xml
<CustomField>
    <fullName>ClosingTime__c</fullName>
    <label>关闭时间</label>
    <type>DateTime</type>
</CustomField>