force-app/main/default/objects/LabBooking__c/fields/IsApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>IsApprovalRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>勾选此项时，学生创建的预约申请需要审批人审批。</inlineHelpText>
    <label>需要批准</label>
    <type>Checkbox</type>
</CustomField>