force-app/main/default/objects/LabBooking__c/fields/LabAddress__c.field-meta.xml
<CustomField>
    <fullName>LabAddress__c</fullName>
    <label>实验室地址</label>
    <length>20</length>
    <type>Text</type>
</CustomField>