force-app/main/default/objects/LabBooking__c/fields/LabEquipment__c.field-meta.xml
<CustomField>
    <fullName>LabEquipment__c</fullName>
    <inlineHelpText>请输入实验室的可用设备或仪器，如计算机、投影仪、白板等。</inlineHelpText>
    <label>实验室设备</label>
    <length>255</length>
    <type>Text</type>
</CustomField>