force-app/main/default/objects/LabBooking__c/fields/LabType__c.field-meta.xml
<CustomField>
    <fullName>LabType__c</fullName>
    <label>场地类别</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SiteTypeGlobal</valueSetName>
    </valueSet>
</CustomField>