force-app/main/default/objects/LabBooking__c/fields/OpeningTime__c.field-meta.xml
<CustomField>
    <fullName>OpeningTime__c</fullName>
    <label>开放时间</label>
    <type>DateTime</type>
</CustomField>