force-app/main/default/objects/LabBooking__c/fields/X1stApprover__c.field-meta.xml
<CustomField>
    <fullName>X1stApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>仅在“需要批准”字段勾选时生效。</inlineHelpText>
    <label>审批人</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LB1stApprover</relationshipName>
    <type>Lookup</type>
</CustomField>