force-app/main/default/objects/LabBooking__c/recordTypes/CommonBooking.recordType-meta.xml
<RecordType>
    <fullName>CommonBooking</fullName>
    <active>true</active>
    <label>通用预约</label>
</RecordType>