force-app/main/default/objects/LabBooking__c/validationRules/ApproverValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ApproverValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				IsApprovalRequired__c = true,
				IF(
								X1stApprover__c != null,
								false,
								true
				),
				false
)</errorConditionFormula>
    <errorMessage>勾选“需要审批”时，“审批人”不能为空。</errorMessage>
</ValidationRule>