force-app/main/default/objects/LabBooking__c/validationRules/BookingTimeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BookingTimeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>BookingStartTime__c &gt; BookingEndTime__c</errorConditionFormula>
    <errorMessage>开放预约时间不能晚于停止预约时间。</errorMessage>
</ValidationRule>