force-app/main/default/objects/LabBooking__c/validationRules/OpeningClosingTimeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>OpeningClosingTimeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>OpeningTime__c &gt; ClosingTime__c</errorConditionFormula>
    <errorMessage>开放时间不能晚于关闭时间。</errorMessage>
</ValidationRule>