force-app/main/default/objects/LabBooking__c/validationRules/StartBookingTimeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>StartBookingTimeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>BookingStartTime__c &gt; ClosingTime__c</errorConditionFormula>
    <errorMessage>开始预约时间不能晚于关闭时间。</errorMessage>
</ValidationRule>