force-app/main/default/objects/LabBooking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>LabAddress__c</columns>
    <columns>LabEquipment__c</columns>
    <columns>OpeningTime__c</columns>
    <columns>ClosingTime__c</columns>
    <columns>BookingStartTime__c</columns>
    <columns>Active__c</columns>
    <columns>Capacity__c</columns>
    <columns>BookedNumber__c</columns>
    <columns>IsApprovalRequired__c</columns>
    <columns>X1stApprover__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>